# hikyuu-factor

./: .env.example  .gitignore  CLAUDE.md  INTEGRATION_TEST_PLAN.md  MOCK_DATA_COMPLIANCE.md  README.md  TEST_REPORT.md  alembic.ini  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  start_agents.py  start_project.sh  successful_tests_report.xml  test_basic_integration.py  test_hikyuu_version.py  test_minimal_integration.py
config/: data_agent.yaml  factor_agent.yaml  signal_agent.yaml  validation_agent.yaml
database/migrations/: env.py  script.py.mako
database/migrations/versions/: 0001_20250922_initial_schema.py  0002_20250922_partitioning.py
database/schemas/: 001_core_tables.sql
hikyuu_factor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
manu/版本发布说明/: 版本发布说明.html
scripts/: complete_integration_test.py  performance_test.py  test_hikyuu_mf.py
spec/: 量化因子系统需求说明书 (V2.4 - 开发规范版).md
specs/001-spec/: spec.md
specs/002-spec-md/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-spec-md/contracts/: data-agent-api.yaml  data_manager_api.yaml  factor-agent-api.yaml  factor_calculation_api.yaml  signal-agent-api.yaml  signal_generation_api.yaml  system-api.yaml  validation-agent-api.yaml  validation_api.yaml
src/: __init__.py
src/agents/: __init__.py  base_agent.py  data_manager_agent.py  factor_calculation_agent.py  signal_generation_agent.py  validation_agent.py
src/api/: __init__.py  exceptions.py  main.py
src/api/middleware/: __init__.py
src/api/routers/v1/: __init__.py
src/api/routers/v1/endpoints/: data.py  factors.py  signals.py  system.py  validation.py
src/cli/: __init__.py  data_manager.py  db_migrate.py  factor_calculate.py  main.py  signal_generate.py
src/data/: hikyuu_interface.py  repository.py
src/lib/: __init__.py  config.py  database.py  database_utils.py  environment.py  exceptions.py  hikyuu_wrapper.py  logging.py  performance.py
src/models/: __init__.py  agent_models.py  audit_log.py  audit_models.py  database.py  database_models.py  factor_definition.py  hikyuu_models.py  platform_config.py  stock_pool.py  trading_signal.py  validation_config.py  validation_models.py
src/scripts/: init_database.py
src/services/: __init__.py  audit_service.py  data_manager_service.py  factor_calculation_service.py  pit_data_service.py  signal_generation_service.py  validation_service.py
tests/: conftest.py  integration_test_config.md  integration_test_config.yaml  utils.py
tests/contract/: __init__.py  test_agent_communication_contract.py  test_data_manager_agent_contract.py  test_data_quality.py  test_data_stocks.py  test_data_update.py  test_factor_calculation_agent_contract.py  test_factors_calculate.py  test_factors_create.py  test_factors_list.py  test_factors_values.py  test_rest_api_contract.py  test_signal_generation.py  test_signal_generation_agent_contract.py  test_system_health.py  test_system_optimization.py  test_system_platform.py  test_validation_agent_contract.py  test_validation_factor.py  test_validation_report.py
tests/fixtures/: __init__.py  datetime_mock.py  external_api_mock.py  factor_data_mock.py  file_system_mock.py  network_service_mock.py  random_data_mock.py  signal_data_mock.py  stock_data_mock.py
tests/integration/: test_agent_communication.py  test_data_workflow.py  test_database_integration.py  test_end_to_end_workflow.py  test_environment.py  test_factor_lifecycle.py  test_performance_benchmarks.py  test_platform_workflow.py  test_signal_workflow.py  test_validation_workflow.py
tests/unit/: test_agent_api_contracts.py  test_agent_models_real.py  test_base_agent_real.py  test_data_manager_service_real.py  test_essential_files.py  test_factor_calculation_service_real.py  test_hikyuu_models_real.py  test_mock_data_generators.py  test_package_initialization.py  test_project_structure.py  test_pyproject_config.py  test_pytest_configuration.py  test_signal_generation_service_real.py  test_test_fixtures.py  test_test_framework_verification.py  test_test_utilities.py  test_validation_service_real.py
